--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -3,6 +3,10 @@ parserOptions:
 
 env:
   es6: true
-  node: true
+  node: true,
+  jest: true
 
 extends: 'htmlacademy/node'
+
+ignorePatterns:
+  '**/express/public/**/*.js'
