--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "Типотека",
   "main": "./src/service/service.js",
   "scripts": {
-    "test": "npm run eslint",
+    "test::rest": "jest",
+    "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
-    "start": "node ./src/service/service.js",
-    "server": "nodemon ./src/service/service.js --server",
+    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
+    "server": "cross-env NODE_ENV=production nodemon ./src/service/service.js --server",
+    "start::debug": "cross-env NODE_ENV=development node ./src/service/service.js",
+    "server::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js --server",
     "start-front-server": "nodemon ./src/express/express.js"
   },
   "repository": {
@@ -23,12 +26,17 @@
   "devDependencies": {
     "eslint": "7.19.0",
     "eslint-config-htmlacademy": "0.6.0",
-    "nodemon": "2.0.7"
+    "jest": "26.6.3",
+    "nodemon": "2.0.7",
+    "pino-pretty": "4.8.0",
+    "supertest": "6.1.3"
   },
   "dependencies": {
     "chalk": "4.1.0",
+    "cross-env": "7.0.3",
     "express": "4.17.1",
     "nanoid": "3.1.23",
+    "pino": "6.11.3",
     "pug": "2.0.4"
   }
 }
