--- a/package.json
+++ b/package.json
@@ -32,9 +32,12 @@
     "supertest": "6.1.3"
   },
   "dependencies": {
+    "axios": "0.21.1",
+    "body-parser": "^1.19.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.3",
     "express": "4.17.1",
+    "multer": "1.4.2",
     "nanoid": "3.1.23",
     "pino": "6.11.3",
     "pug": "2.0.4"
