--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "axios": "0.21.1",
-    "body-parser": "^1.19.0",
+    "body-parser": "1.19.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.3",
     "express": "4.17.1",
