--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "test::rest": "jest",
     "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
-    "start": "cross-env NODE_ENV=production node ./src/service/service.js",
-    "server": "cross-env NODE_ENV=production nodemon ./src/service/service.js --server",
-    "start::debug": "cross-env NODE_ENV=development node ./src/service/service.js",
-    "server::debug": "cross-env NODE_ENV=development nodemon ./src/service/service.js --server",
+    "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
+    "server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
+    "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
+    "server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
     "start-front-server": "nodemon ./src/express/express.js"
   },
   "repository": {
@@ -36,10 +36,13 @@
     "body-parser": "1.19.0",
     "chalk": "4.1.0",
     "cross-env": "7.0.3",
+    "dotenv": "10.0.0",
     "express": "4.17.1",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
+    "pg": "8.7.1",
     "pino": "6.11.3",
-    "pug": "2.0.4"
+    "pug": "2.0.4",
+    "sequelize": "6.6.5"
   }
 }
