--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
     "server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
-    "start-front-server": "nodemon ./src/express/express.js"
+    "start-front-server": "nodemon ./src/express/express.js",
+    "filldb": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js --filldb 7"
   },
   "repository": {
     "type": "git",
@@ -29,6 +30,7 @@
     "jest": "26.6.3",
     "nodemon": "2.0.7",
     "pino-pretty": "4.8.0",
+    "sqlite3": "5.0.2",
     "supertest": "6.1.3"
   },
   "dependencies": {
