--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
     "server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
-    "start-front-server": "nodemon ./src/express/express.js",
+    "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
     "filldb": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js --filldb 7"
   },
   "repository": {
@@ -38,9 +38,12 @@
     "bcrypt": "5.0.1",
     "body-parser": "1.19.0",
     "chalk": "4.1.0",
+    "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
+    "csurf": "1.11.0",
     "dotenv": "10.0.0",
     "express": "4.17.1",
+    "express-session": "1.17.2",
     "joi": "17.4.2",
     "multer": "1.4.2",
     "nanoid": "3.1.23",
