--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test::rest": "jest",
     "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
-    "start": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
-    "server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
+    "start": "npm run start-servers",
+    "service": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
     "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
-    "server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
+    "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
+    "start-back-server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
     "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
+    "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
     "filldb": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js --filldb 7"
   },
   "repository": {
@@ -38,6 +40,7 @@
     "bcrypt": "5.0.1",
     "body-parser": "1.19.0",
     "chalk": "4.1.0",
+    "concurrently": "6.4.0",
     "connect-session-sequelize": "7.1.2",
     "cross-env": "7.0.3",
     "csurf": "1.11.0",
