--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "test": "npm run eslint && npm run test::rest",
     "eslint": "eslint --ext .js src/",
     "start": "npm run start-servers",
+    "dev": "npm run start-servers-dev",
     "service": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js",
     "start::debug": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js",
     "start-back-server": "cross-env NODE_ENV=production node -r dotenv/config ./src/service/service.js --server",
     "start-back-server::debug": "cross-env NODE_ENV=development nodemon -r dotenv/config ./src/service/service.js --server",
     "start-front-server": "nodemon -r dotenv/config ./src/express/express.js",
     "start-servers": "concurrently \"npm run start-back-server\" \"npm run start-front-server\"",
+    "start-servers-dev": "concurrently \"npm run start-back-server::debug\" \"npm run start-front-server\"",
     "filldb": "cross-env NODE_ENV=development node -r dotenv/config ./src/service/service.js --filldb 7"
   },
   "repository": {
